--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,37 @@
-[bdist_wheel]
-universal = 1
 [pep8]
 ignore=E221,E501,E701
+
+[metadata]
+name = django-decide-host
+version = attr: decide_host.__version__
+description = A Django-based database for trials and events in the decide operant control system
+long_description = file: README.md
+long_description_content_type = text/markdown
+license = BSD 3-Clause License
+classifiers =
+    Development Status :: 4 - Beta
+    Framework :: Django
+    Intended Audience :: Science/Research
+    License :: OSI Approved :: BSD License
+    Programming Language :: Python
+    Topic :: Scientific/Engineering
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Internet :: WWW/HTTP :: Dynamic Content
+author = C Daniel Meliza
+author_email = dan@meliza.org
+maintainer = C Daniel Meliza
+maintainer_email = dan@meliza.org
+url = https://github.com/melizalab/django-decide-host
+
+[options]
+zip_safe = false
+include_package_data = true
+packages = decide_host
+python_requires = >= 3.8
+setup_requires =
+    setuptools
+test_suite = decide_host.tests
+
+[options.packages.find]
+exclude = *test*
+
