move dependencies into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,10 @@ packages = decide_host
 python_requires = >= 3.8
 setup_requires =
     setuptools
+install_requires =
+    django-filter >= 23.4
+    djangorestframework >= 3.14.0
+    drf-link-header-pagination >= 0.2.0
 test_suite = decide_host.tests
 
 [options.packages.find]
