--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-        django-version: ["4.2,<5", "5.2"]
+        django-version: ["4.2", "5.2"]
             
     services:
       postgres:
@@ -40,6 +40,6 @@ jobs:
         DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
         uv sync --frozen
-        uv add "Django>${DJANGO_VERSION}"
+        uv add "Django~=${DJANGO_VERSION}"
     - name: Run tests on python ${{ matrix.python-version }}
       run: uv run pytest        
