--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ classifiers = [
     "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
 ]
 dependencies = [
-    "django>4.2,<5",
+    "django~=5.2",
     "djangorestframework",
     "djangorestframework-link-header-pagination",
     "django-filter>=22.1",
